Cherry-pick r262330. rdar://problem/63891486

REGRESSION (r260306): Compatibility issue leading to crash on macOS games
    <https://webkit.org/b/212546>
    <rdar://problem/62624078>

    Reviewed by Brent Fulgham.

    * WebView/WebView.mm:
    (_WebSafeForwarder._target):
    (_WebSafeForwarder._defaultTarget):
    - Change __weak attribute to __unsafe_unretained to fix the
      crash.

    Canonical link: https://commits.webkit.org/225378@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262330 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/225162.9@safari-610.1.15-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-610.1.15-branch@262444 268f45cc-cd09-0410-ab3c-d52691b4dbfc